--- a/Test.css
+++ b/Test.css
@@ -2,7 +2,7 @@
 * @Author: 嗨阿森纳
 * @Date:   2018-12-11 19:10:02
 * @Last Modified by:   嗨阿森纳
-* @Last Modified time: 2018-12-16 16:49:23
+* @Last Modified time: 2018-12-17 09:26:13
 */
 *{
 	padding: 0;
@@ -14,11 +14,11 @@ ol,ul,li{
 a{
 	text-decoration: none;
 }
-/* table{
+table{
     border-collapse: collapse;
     border-spacing: 0;
 
-} */
+}
 .header{
 	width: 100%;
 	height: 170px;
@@ -29,6 +29,7 @@ a{
 	width: 100%;
 	height: 130px;
 	margin: 0 auto;
+	background: #ffffff;
 }
 .top{
 	margin: 0 auto;
@@ -56,6 +57,7 @@ a{
 	margin: 0 auto;
 	width: 1180px;
 	height: 570px;
+	background: #ffffff;
 }
 .left1{
 	width: 170px;
@@ -205,7 +207,7 @@ a{
 }
 .bottom{
 	width: 100%;
-	height: 370px;
+	height: 390px;
 	background-color: #f8f7f6;
 }
 .bottom2{
@@ -229,7 +231,7 @@ a{
 .bottom3{
 	margin: 0 auto;
 	width: 1180px;
-	height: 188px;
+	height: 190px;
 }
 .bottom3 img{
 	display: block;
@@ -237,10 +239,10 @@ a{
 	padding-top: 12px;
 } 
 .bottom-imgs{
-	height: 60px;
+	height: 80px;
 	width: 800px;
-	display: block;
-	padding-left: 200px;
+	margin: 0 auto;
+	/* m-left: 200px; */
 	padding-top: 117px;
 }
 .bottom-imgs img{
